--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
-        <group android:checkableBehavior="single"
+    <group android:checkableBehavior="single"
                 >
 
             <item
+                android:title="Settings"
+                android:icon="@drawable/settings"
+                android:id="@+id/settings"
+                app:showAsAction="ifRoom"
+                android:orderInCategory="100"/>
+             <item
                 android:id="@+id/nav_joblist"
                 android:icon="@drawable/ic_job_list"
-
-                android:title="Job List" />
-            <item android:id="@+id/nav_delivery"
+                android:title="Job List"
+            />
+            <item
+                android:id="@+id/nav_delivery"
                 android:icon="@drawable/ic_delivery"
-                android:title="Delivery" />
+                android:title="Delivery"
+                />
 
-            <item android:id="@+id/nav_collection"
+            <item
+                android:id="@+id/nav_collection"
                 android:icon="@drawable/ic_collection"
                 android:title="Collection"
                 />
