Dark theme 40% Implemented

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     tools:context=".MainActivity"
+    android:padding="24dp"
     tools:openDrawer="start">
 
     <LinearLayout
@@ -13,8 +14,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#E0E0E0E0"
+        android:padding="24dp">
 
-        >
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+        </androidx.cardview.widget.CardView>
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
